--- a/package.xml
+++ b/package.xml
@@ -11,6 +11,7 @@
   <depend>rosdyn_core</depend>
   <depend>geometry_msgs</depend>
   <depend>tf</depend>
+  <depend>pbo_service</depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
