--- a/package.xml
+++ b/package.xml
@@ -14,6 +14,8 @@
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
   <depend>rotations_helper</depend>
+  <depend>tf_conversion</depend>
+  <depend>eigen_conversion</depend>
 <!--   <depend>pbo_service</depend> -->
 
 
